[package]
name = "lookoutside"
version = "0.1.1"
edition = "2021"
description = "Look outside from your terminal with automatic local weather"
license = "MIT"

[[bin]]
name = "lookoutside"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
lto = "thin"
strip = true
codegen-units = 1
